force-app/main/default/objects/Attendance__c/fields/Absence_Category__c.field-meta.xml
<CustomField>
    <fullName>Absence_Category__c</fullName>
    <label>Absence Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Attendance_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Absence_Category</valueSetName>
    </valueSet>
</CustomField>