force-app/main/default/objects/Attendance__c/fields/Calendar_Subject__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Subject__c</fullName>
    <formula>TEXT(Attendance_Status__c) &amp; &quot; - &quot; &amp; Employee__r.Name &amp; 
IF(TEXT(Attendance_Status__c) = &quot;Present&quot;, &quot;&quot;, &quot; (&quot; &amp; TEXT(Absence_Category__c) &amp; &quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Subject</label>
    <type>Text</type>
</CustomField>