force-app/main/default/objects/Attendance__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Attendance_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Absence_Compensation</valueSetName>
    </valueSet>
</CustomField>