force-app/main/default/objects/Attendance__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Day</label>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>