force-app/main/default/objects/Attendance__c/fields/Day_of_the_Week_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week_Numeric__c</fullName>
    <formula>MOD( Date__c - DATE(1900, 1, 8), 7) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>