force-app/main/default/objects/Attendance__c/fields/Employee_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Employment_Status__c</fullName>
    <formula>TEXT(Employee__r.Employment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Employment Status</label>
    <type>Text</type>
</CustomField>