force-app/main/default/objects/Attendance__c/fields/Employee_s_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee&apos;s Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>