force-app/main/default/objects/Attendance__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_HH_mm</valueSetName>
    </valueSet>
</CustomField>