force-app/main/default/objects/Attendance__c/fields/Hours_of_Absence__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Absence__c</fullName>
    <label>Hours of Absence</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>