force-app/main/default/objects/Attendance__c/fields/Is_Day_in_the_Past__c.field-meta.xml
<CustomField>
    <fullName>Is_Day_in_the_Past__c</fullName>
    <formula>Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula is true, if the Date is in the past.</inlineHelpText>
    <label>Is Day in the Past</label>
    <type>Checkbox</type>
</CustomField>