force-app/main/default/objects/Attendance__c/fields/Is_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Holiday__c</fullName>
    <formula>IF( TEXT(Country__c)=&quot;Denmark&quot;, INCLUDES(Day__r.Public_Holiday__c,&quot;Denmark&quot;), IF( TEXT(Country__c)=&quot;Sweden&quot;, INCLUDES(Day__r.Public_Holiday__c,&quot;Ireland&quot;), IF( TEXT(Country__c)=&quot;United Kingdom&quot;, INCLUDES(Day__r.Public_Holiday__c,&quot;Canada&quot;), FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Public Holiday</label>
    <type>Checkbox</type>
</CustomField>