force-app/main/default/objects/Attendance__c/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>