force-app/main/default/objects/Attendance__c/fields/PTO_Request__c.field-meta.xml
<CustomField>
    <fullName>PTO_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PTO Request</label>
    <referenceTo>SFDC_PTO_Request__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>