force-app/main/default/objects/Attendance__c/fields/Relation_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Employee__c</fullName>
    <formula>IF(
 Employee__r.Manager__c  = $User.Id,
&quot;Manager&quot;,
IF(
 Employee__r.Supervisor__c  = $User.Id,
&quot;Supervisor&quot;,
IF(
 Employee__r.SF_User__c  = $User.Id,
&quot;Me&quot;,
&quot;None&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation to Employee</label>
    <type>Text</type>
</CustomField>