force-app/main/default/objects/Attendance__c/fields/Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet__c</fullName>
    <label>Time Sheet</label>
    <referenceTo>Time_Sheet__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>