force-app/main/default/objects/Attendance__c/fields/Vacation_Days_Spent__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days_Spent__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Absence_Category__c, &quot;Vacation&quot;),
NOT(OR(Day_of_the_Week_Numeric__c= 6, Day_of_the_Week_Numeric__c= 7))
),
IF(
AND(
ISPICKVAL(Country__c, &quot;Spain&quot;),
Day_of_the_Week_Numeric__c= 5
),
3,
1
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Days Spent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>