force-app/main/default/objects/Attendance__c/validationRules/Partial_Day_Compensation_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Partial_Day_Compensation_Restriction</fullName>
    <active>true</active>
    <description>Ensure that if Attendance_Status__c is &quot;Partial Day,&quot; Compensation__c cannot be &quot;Unpaid Leave&quot;:</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Attendance_Status__c, &quot;Partial Day&quot;),
  ISPICKVAL(Compensation__c, &quot;Unpaid Leave&quot;)
)</errorConditionFormula>
    <errorDisplayField>Compensation__c</errorDisplayField>
    <errorMessage>You cannot select &quot;Unpaid Leave&quot;, when Attendance Status is set to &quot;Partial Day&quot;</errorMessage>
</ValidationRule>