force-app/main/default/objects/Attendance__c/validationRules/Partial_Day_Required_Fields_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Partial_Day_Required_Fields_Validation</fullName>
    <active>true</active>
    <description>Ensure that if Attendance_Status__c is &quot;Partial Day,&quot; both Absence_Category__c and Compensation__c must be specified:</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Attendance_Status__c, &quot;Partial Day&quot;),
  OR(
    ISBLANK(TEXT(Absence_Category__c)),
    ISBLANK(TEXT(Compensation__c))
  )
)</errorConditionFormula>
    <errorMessage>If you set Attendance Status is &quot;Partial Day&quot; you have to specify both Absence Category and Compensation.</errorMessage>
</ValidationRule>