force-app/main/default/objects/Attendance__c/validationRules/Present_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Present_Status_Validation</fullName>
    <active>true</active>
    <description>Ensure that if Attendance_Status__c is &quot;Present,&quot; both Absence_Category__c and Compensation__c must be empty:</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Attendance_Status__c, &quot;Present&quot;),
  OR(
    NOT(ISBLANK(TEXT(Absence_Category__c))),
    NOT(ISBLANK(TEXT(Compensation__c)))
  )
)</errorConditionFormula>
    <errorMessage>You cannot set Compensation and Absence Category, if Attendance Status is &quot;Present&quot;</errorMessage>
</ValidationRule>