force-app/main/default/objects/Attendance__c/listViews/Absence_This_Week.listView-meta.xml
<ListView>
    <fullName>Absence_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent,Partial Day</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Relation_to_Employee__c</field>
        <operation>equals</operation>
        <value>Manager,Supervisor</value>
    </filters>
    <label>Absence This Week</label>
</ListView>