force-app/main/default/objects/Attendance__c/listViews/Allan_Kj_r_Hansen_Absence_Denmark.listView-meta.xml
<ListView>
    <fullName>Allan_Kj_r_Hansen_Absence_Denmark</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Compensation__c</columns>
    <columns>Country__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Employee__c</columns>
    <columns>Time_Sheet__c</columns>
    <columns>Vacation_Days_Spent__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent,Partial Day</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Denmark,Spain</value>
    </filters>
    <filters>
        <field>Employee__c</field>
        <operation>contains</operation>
        <value>Allan</value>
    </filters>
    <label>Allan Kjær Hansen Absence (Denmark)</label>
</ListView>