force-app/main/default/objects/Attendance__c/listViews/Attendance_without_Time_Sheet.listView-meta.xml
<ListView>
    <fullName>Attendance_without_Time_Sheet</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Compensation__c</columns>
    <columns>Country__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Employee__c</columns>
    <columns>Time_Sheet__c</columns>
    <columns>Vacation_Days_Spent__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Time_Sheet__c</field>
        <operation>equals</operation>
    </filters>
    <label>Attendance without Time Sheet</label>
</ListView>