force-app/main/default/objects/Attendance__c/listViews/My_Employee_s_Work_Week_Absence.listView-meta.xml
<ListView>
    <fullName>My_Employee_s_Work_Week_Absence</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent,Partial Day</value>
    </filters>
    <filters>
        <field>Day_of_the_Week_Numeric__c</field>
        <operation>lessOrEqual</operation>
        <value>5</value>
    </filters>
    <filters>
        <field>Relation_to_Employee__c</field>
        <operation>equals</operation>
        <value>Manager,Supervisor</value>
    </filters>
    <label>My Employee&apos;s Work Week Absence</label>
</ListView>